tests/baselines/reference/parserModuleDeclaration10.errors.txt
==== tests/cases/compiler/parserModuleDeclaration10.ts (1 errors) ====
    function data(): string;
             ~~~~
!!! parserModuleDeclaration10.ts(1,10): error TS2238: Function implementation expected.
    function next(): string;
    